--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/poi-3.10-FINAL/ooxml-lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/poi-3.10-FINAL/ooxml-lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/poi-3.10-FINAL/ooxml-lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/commons-math3-3.4.1/commons-math3-3.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
