--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/poi-3.10-FINAL/ooxml-lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/poi-3.10-FINAL/ooxml-lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/commons-math3-3.4.1/commons-math3-3.4.1.jar"/>
+	<classpathentry kind="lib" path="/home/eduardolfalcao/Downloads/opencsv-3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
